hphp/test/zend/bad/ext/opcache/tests/is_script_cached.php
<?php
var_dump(opcache_is_script_cached(__FILE__));
var_dump(opcache_is_script_cached("nonexistent.php"));
?>